--- a/desktop/header.html
+++ b/desktop/header.html
@@ -1,109 +1,107 @@
 <!-- So called "Sanitized Mod", combine "Activity" and "Users" columns to one "Latest post" column -->
-<script type='text/x-handlebars' data-template-name='list/topic-list-item.raw'>
-	{{#if bulkSelectEnabled}}
-	<td class='star'>
-		<input type="checkbox" class="bulk-select">
-	</td>
-	{{/if}}
+<script type="text/x-handlebars" data-template-name="list/topic-list-item.raw">
+  {{#if bulkSelectEnabled}}
+  <td class='star'>
+  	<input type="checkbox" class="bulk-select">
+  </td>
+  {{/if}}
 
-	<td class='main-link clearfix' colspan="{{titleColSpan}}">
-	  <span class='link-top-line'>
-		{{raw-plugin-outlet name="topic-list-before-status"}}
-		{{raw "topic-status" topic=topic}}
-		{{topic-link topic}}
-		{{#if topic.featured_link}}
-		  {{topic-featured-link topic}}
-		{{/if}}
-		{{raw-plugin-outlet name="topic-list-after-title"}}
-		{{#if showTopicPostBadges}}
-		  {{raw "topic-post-badges" unread=topic.unread newPosts=topic.displayNewPosts unseen=topic.unseen url=topic.lastUnreadUrl}}
-		{{/if}}
-	  </span>
+  <td class='main-link clearfix' colspan="{{titleColSpan}}">
+    <span class='link-top-line'>
+  	{{raw-plugin-outlet name="topic-list-before-status"}}
+  	{{raw "topic-status" topic=topic}}
+  	{{topic-link topic}}
+  	{{#if topic.featured_link}}
+  	  {{topic-featured-link topic}}
+  	{{/if}}
+  	{{raw-plugin-outlet name="topic-list-after-title"}}
+  	{{#if showTopicPostBadges}}
+  	  {{raw "topic-post-badges" unread=topic.unread newPosts=topic.displayNewPosts unseen=topic.unseen url=topic.lastUnreadUrl}}
+  	{{/if}}
+    </span>
 
-		{{#if topic.tags}}
-		<div class='discourse-tags'>
-			{{#each topic.visibleListTags as |tag|}}
-			{{discourse-tag tag}}
-			{{/each}}
-		</div>
-		{{/if}}
-		{{raw-plugin-outlet name="topic-list-tags"}}
-		{{#if expandPinned}}
-		{{raw "list/topic-excerpt" topic=topic}}
-		{{/if}}
-		{{raw "list/action-list" topic=topic postNumbers=topic.liked_post_numbers className="likes" icon="heart"}}
-	</td>
+  	{{#if topic.tags}}
+  	<div class='discourse-tags'>
+  		{{#each topic.visibleListTags as |tag|}}
+  		{{discourse-tag tag}}
+  		{{/each}}
+  	</div>
+  	{{/if}}
+  	{{raw-plugin-outlet name="topic-list-tags"}}
+  	{{#if expandPinned}}
+  	{{raw "list/topic-excerpt" topic=topic}}
+  	{{/if}}
+  	{{raw "list/action-list" topic=topic postNumbers=topic.liked_post_numbers className="likes" icon="heart"}}
+  </td>
 
-	{{#unless hideCategory}}
-	{{#unless topic.isPinnedUncategorized}}
-	{{raw "list/category-column" category=topic.category}}
-	{{/unless}}
-	{{/unless}}
+  {{#unless hideCategory}}
+  {{#unless topic.isPinnedUncategorized}}
+  {{raw "list/category-column" category=topic.category}}
+  {{/unless}}
+  {{/unless}}
 
-	<td class="num views {{topic.viewsHeat}}">{{number topic.views numberKey="views_long"}}</td>
+  <td class="num views {{topic.viewsHeat}}">{{number topic.views numberKey="views_long"}}</td>
 
-	{{raw "list/posts-count-column" topic=topic}}
+  {{raw "list/posts-count-column" topic=topic}}
 
-	{{#if showParticipants}}
-	{{raw "list/posters-column" posters=topic.participants}}
-	{{/if}}
+  {{#if showParticipants}}
+  {{raw "list/posters-column" posters=topic.participants}}
+  {{/if}}
 
-	{{#if showLikes}}
-	<td class="num likes">
-		{{#if hasLikes}}
-		<a href='{{topic.summaryUrl}}'>
-			{{number topic.like_count}} <i class='fa fa-heart'></i></td>
-	</a>
-	{{/if}}
-	{{/if}}
+  {{#if showLikes}}
+  <td class="num likes">
+  	{{#if hasLikes}}
+  	<a href='{{topic.summaryUrl}}'>
+  		{{number topic.like_count}} <i class='fa fa-heart'></i></td>
+  </a>
+  {{/if}}
+  {{/if}}
 
-	{{#if showOpLikes}}
-	<td class="num likes">
-		{{#if hasOpLikes}}
-		<a href='{{topic.summaryUrl}}'>
-			{{number topic.op_like_count}} <i class='fa fa-heart'></i></td>
-	</a>
-	{{/if}}
-	{{/if}}
+  {{#if showOpLikes}}
+  <td class="num likes">
+  	{{#if hasOpLikes}}
+  	<a href='{{topic.summaryUrl}}'>
+  		{{number topic.op_like_count}} <i class='fa fa-heart'></i></td>
+  </a>
+  {{/if}}
+  {{/if}}
 
-	<td class="activity" title="{{topic.bumpedAtTitle}}">
-		<a href="{{topic.lastPostUrl}}">
-			{{avatar topic.lastPoster usernamePath="username" imageSize="medium"}}
-			<span class='latest-info'>
-          <span class='name'>
-            {{topic.last_poster_username}}
-          </span>
-          {{format-date topic.bumpedAt format="medium"}}
-        </span>
-		</a>
-	</td>
-
+  <td class="activity" title="{{topic.bumpedAtTitle}}">
+  	<a href="{{topic.lastPostUrl}}">
+  		{{avatar topic.lastPoster usernamePath="username" imageSize="medium"}}
+  		<span class='latest-info'>
+           <span class='name'>
+             {{topic.last_poster_username}}
+           </span>
+           {{format-date topic.bumpedAt format="medium"}}
+         </span>
+  	</a>
+  </td>
 </script>
 
 <!-- Same for header row. -->
-<script type='text/x-handlebars' data-template-name='topic-list-header.raw'>
-	{{#if bulkSelectEnabled}}
-	<th class='star'>
-		{{#if canBulkSelect}}
-		{{raw "flat-button" class="bulk-select" icon="list" title="topics.bulk.toggle"}}
-		{{/if}}
-	</th>
-	{{/if}}
-	{{raw "topic-list-header-column" order='default' name='topic.title' bulkSelectEnabled=bulkSelectEnabled showBulkToggle=toggleInTitle canBulkSelect=canBulkSelect}}
-	{{#unless hideCategory}}
-	{{raw "topic-list-header-column" sortable=sortable order='category' name='category_title'}}
-	{{/unless}}
-	{{raw "topic-list-header-column" sortable=sortable number='true' order='views' name='views'}}
-	{{raw "topic-list-header-column" sortable=sortable number='true' order='posts' name='replies'}}
-	{{#if showParticipants}}
-	{{raw "topic-list-header-column" order='participants' name='users'}}
-	{{/if}}
-	{{#if showLikes}}
-	{{raw "topic-list-header-column" sortable=sortable number='true' order='likes' name='likes'}}
-	{{/if}}
-	{{#if showOpLikes}}
-	{{raw "topic-list-header-column" sortable=sortable number='true' order='op_likes' name='likes'}}
-	{{/if}}
-	{{raw "topic-list-header-column" sortable=sortable number='true' order='activity' name='search.latest_post'}}
-
+<script type="text/x-handlebars" data-template-name="topic-list-header.raw">
+  {{#if bulkSelectEnabled}}
+  <th class='star'>
+  	{{#if canBulkSelect}}
+  	{{raw "flat-button" class="bulk-select" icon="list" title="topics.bulk.toggle"}}
+  	{{/if}}
+  </th>
+  {{/if}}
+  {{raw "topic-list-header-column" order='default' name='topic.title' bulkSelectEnabled=bulkSelectEnabled showBulkToggle=toggleInTitle canBulkSelect=canBulkSelect}}
+  {{#unless hideCategory}}
+  {{raw "topic-list-header-column" sortable=sortable order='category' name='category_title'}}
+  {{/unless}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='views' name='views'}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='posts' name='replies'}}
+  {{#if showParticipants}}
+  {{raw "topic-list-header-column" order='participants' name='users'}}
+  {{/if}}
+  {{#if showLikes}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='likes' name='likes'}}
+  {{/if}}
+  {{#if showOpLikes}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='op_likes' name='likes'}}
+  {{/if}}
+  {{raw "topic-list-header-column" sortable=sortable number='true' order='activity' name='search.latest_post'}}
 </script>
